--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.4"
 
 cache:
+  pip: true
   directories:
     - $HOME/.pip-cache/
 
@@ -13,4 +14,5 @@ install:
   - pip install -q -r requirements.txt --download-cache $HOME/.pip-cache
 
 # command to run tests (docs)
-script: sphinx-build -n -b html -d build/doctrees source build/html
+script:
+  - sphinx-build -n -b html -d build/doctrees source build/html
